Fixed menu text-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,8 @@ header {
 }
 
 .navbar-brand {
-  text-align: left;
+  /* text-align: left; */
+  /* margin: 0 0 0 50px !important; */
 }
 
 #menu-logo img {
@@ -59,7 +60,8 @@ header {
   /* left: 0; */
   /* top: -8px; */
   /* margin: 15px 5px 10px 10px; */
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 0 0 5px;
   object-fit: cover;
   object-position: center;
 }
@@ -104,7 +106,7 @@ a:active {
   /* position: relative;
   top: 1px;
   left: 45%; */
-  text-align: right;
+  /* text-align: right; */
 }
 @media (max-width: 768px) {
   #menu-icons {
@@ -118,13 +120,18 @@ a:active {
 
 #menu-icons img {
   height: 30px;
-  margin: 5px 5px 0px 5px;
+  margin: 5px 5px 5px 5px;
 }
 
 /*------Body--------*/
 
 .row {
   background-color: rgb(4, 70, 75);
+  --bs-gutter-x: 0;
+  /* margin: 0 !important; */
+}
+.col-4 {
+  /* flex-basis: 360px !important; */
 }
 .col-6 {
   padding: 0 !important;
@@ -147,8 +154,8 @@ a:active {
   /* justify-content: left;
   width: 100%;
   height: 100%; */
-
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 /* INDEX RIGHT SIDE */
 #index-right {
